@@ -1,3 +1,10 @@
+2015-12-15  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Add a new Particle::setMomentum(E,x,y,z) method, and an origin
+	position member which is automatically populated from the
+	GenParticle, with access methods corresponding to the momentum
+	ones.
+
 2015-12-10  Andy Buckley  <andy.buckley@cern.ch>
 
 	* make-plots: improve custom tick attribute handling, allowing
